# plant_disease_model_oc_paper

./: .gitignore  README.md  clean.sh  pyproject.toml  requirements.txt  setup.sh
notebooks/: oc_vs_priority_based.py  reporting_utils.py  study_in_parts.py
plant_disease_model/: local_control_ablations_config.py
plant_disease_model/analysis/: __init__.py  pd_study.py
plant_disease_model/analysis/plot_blocks/: __init__.py  comparison_plot_block.py  eradication_time_plot_block.py  git_tag_plot_block.py  infected_culled_died_plot_block.py  model_illustration_plot_block.py  sims_with_n_infected_nodes_vs_time.py  trained_performance_plot_block.py
plant_disease_model/control/: __init__.py  controller_plotter.py  pd_oc_io.py  plant_disease_oc_target.py  plant_disease_target.py  random_subpop_control.py  sensitivity_based_control_target.py  target_factory.py  target_settings.py
plant_disease_model/experiments/: __init__.py  simple_controls.py
plant_disease_model/experiments/oc_vs_risk_based/: __init__.py  build_grid.py  controllable_grid_study.py  intermediate_grid_study.py  mpc_scale_study.py  set_bounds.py  strenuous_grid_study.py  tiny_cull_or_thin.py
plant_disease_model/simulator/: __init__.py  cull_or_thin_env.py  deterministic_node.py  graph_filters.py  kernels.py  network.py  network_builder.py  node.py  plant_network_base_env.py  plotter.py  simulator.py  xy_visual.py
plant_disease_model/simulator/experiments/: stochastic_die_out_w_rate.py
tests/: test_CullOrThinEnv.py  test_Network.py  test_Node.py  test_ablations.py  test_oc.py  test_targets.py
